--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <H1>Hello world!</H1>
+    <H1>Hello world Блять!</H1>
     <H2>Another title</H2>
     <div class="block">
         <div class="block_color"></div>
